--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Little Tags</title>
+  <style>
+    html,
+    body {
+      height: 100%;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+  </style>
 </head>
 
 <body>
